--- a/index.html
+++ b/index.html
@@ -3,104 +3,66 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Abel's Personal Site</title>
+  <title>Abel Zerezgh</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
+
 <body>
-  <table cellspacing="15px">
-    <tr>
 
-      <a href="https://www.w3schools.com/howto/howto_html_download_link.asp">
-        <td><img src="download.jpeg" alt="Abel profile picture">
-      </a> </td>
-      <td>
+  <div class="navbar">
+    <img class="profile-pic" src="rocket.png" alt="Abel's profile">
+    <a  href=#htext>About Me</a>
+    <a href="#mskills">Projects</a>
+    <a href="#ctct">Contact</a>
 
-        <h1>Abel Zerezghi</h1>
-        <p>
-          <em>Founder and CEO of <strong><a href="https://www.instagram.com/4abel/">BBXR Hedge Fund</a></strong></em>
-        </p>
-        <br>
-        <p><strong>Abel Zerezghi Jr Yohannes</strong>
-          is a serial <em>entrepreneur/hedge fund CEO and
-            a full stack web developper</em>
-          in his early tweenties who been making looking
-          the world of trading a comdedical drama with his
-          sniper entries and really powerful future predicting
-          pin point analysis in his firm which got him to win the best <strong>Entrepreneur Award at the Grammy's</strong>. Astonishingly his HFUND is named after his
-          love for his entire family and his famous nick name BBXR,
-          now for over <strong>15 years</strong>.
-        </p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education and Experiences</h3>
-  <ul>
-    <li>Law School Drop Out</li>
-    <li>Web developper</li>
-    <li>Part Time EDM producer</li>
-  </ul>
-  <a href="Hobbies.html">My Hobbies</a>
-<hr>
-  <br>
-  <h3>Work Experience</h3>
-  <table border="30px">
+  </div>
 
-    <tr>
-      <td>2010-2013</td>
-      <td>Lead senior Dev @BBXR</td>
-    </tr>
-    <tr>
-      <td>2013-2017</td>
-      <td>Lead senior Engineer @LIIP</td>
-    </tr>
-  </table>
-  <hr>
-  <h2>Skills</h2>
+  <div class="top-container">
 
-  <table cellspacing="10px">
-    <tr>
-      <td>
-        <table cellspacing="10px">
-          <tr>
-            <td>Front End</td>
-            <td>🌟🌟🌟🌟🌟</td>
-          </tr>
-          <tr>
-            <td>Back End</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10px">
-          <tr>
-            <td>Web Developpment</td>
-            <td>🌟🌟🌟🌟🌟</td>
-          </tr>
-          <tr>
-            <td>Flutter Developpment</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+    <h1  class="headertext">Hi I'm Abel</h1>
+    <h2 class="headertext">An upcoming web developper and programmer with a lot of passion for the IT industry.</h2>
+    <img src="land.svg" alt="land-image">
+  </div>
 
 
+  <div id="htext" class="middle-container">
+    <div class="profile">
+      <img src="hangin.png" alt="Abel's profile picture">
+      <h2>Hello again.</h2>
+      <p class="intro">I'm a web designer / developer based in Geneva, Switzerland. I have a passion for web design and love to create for web and mobile devices.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2 id="mskills">My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill1" src="office.png" alt="Abel working on his projects">
+        <h3>Design what you want.</h3>
+        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill2" src="hehe.png" alt="Abel is a cool guy with awesome skills on IT tech">
+        <h3>Develop what you need.</h3>
+        <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2 id="ctct" >Get In Touch</h2>
+      <h3>I’m currently available for an internship or freelance work.</h3>
+      <p class="contactmessage">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+      <a class="btn" href="mailto:babixer@gmail.com">MESSAGE ME</a>
+    </div>
+  </div>
 
 
-
-
-
-  <hr>
-  <a download href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">DownLoad Top Tips to be a Web Dev</a>
-  <br>
-  <a href="Contact.html">Contact Me</a>
-  <hr>
-  <footer>
-    Footer
-  </footer>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/abelze">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/babixer">Twitter</a>
+    <a class="footer-link" href="index.html">Website</a>
+    <p>© 2019<a href="index.html">Abel Zerezghi</a>By BBXR</p>
+  </div>
 </body>
 
 </html>
