--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
     <div class="profile">
       <img src="hangin.png" alt="Abel's profile picture">
       <h2>Hello again.</h2>
-      <p class="intro">I'm a web designer / developer based in Geneva, Switzerland. I have a passion for web design and love to create for web and mobile devices.</p>
+      <p class="intro">I'm a web designer / developer student based in Geneva, Switzerland. I have a passion for web design and love to create for web and mobile devices. Also I love new challenges and learning new skills.</p>
     </div>
     <hr>
     <div class="skills">
       <h2 id="mskills">My Skills.</h2>
       <div class="skill-row">
         <img class="skill1" src="office.png" alt="Abel working on his projects">
-        <h3>Design what you want.</h3>
-        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+        <h3>Design what you want</h3>
+        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send. Also I like to perfect the technical side so that it'll be easier for you to understand the process of web developement.</p>
       </div>
       <div class="skill-row">
         <img class="skill2" src="hehe.png" alt="Abel is a cool guy with awesome skills on IT tech">
-        <h3>Develop what you need.</h3>
+        <h3>Develop what you need</h3>
         <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2 id="ctct" >Get In Touch</h2>
-      <h3>I’m currently available for an internship or freelance work.</h3>
+      <h3>I’m currently available for an internship to further develop my skills into a fullstack developper.</h3>
       <p class="contactmessage">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
       <a class="btn" href="mailto:babixer@gmail.com">MESSAGE ME</a>
     </div>
@@ -59,9 +59,9 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/abelze">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/babixer">Twitter</a>
+    <a class="footer-link" href="https://instagram.com/4abel">Instagram</a>
     <a class="footer-link" href="index.html">Website</a>
-    <p>© 2019<a href="index.html">Abel Zerezghi</a>By BBXR</p>
+    <p>© 2019<a href="index.html">Abel Zerezghi</a></p>
   </div>
 </body>
 
